syntax = "proto3";

package note;

option go_package = "github.com/yb2020/odoc/proto/gen/go/note";


message AnnotateTextBox {
    
    float x = 1;

    float y = 2;

    float width = 3;

    float height = 4;

    string borderColor = 5;

    repeated Font fonts = 6;

    string id = 7;
 }

 message Font {

    string content = 1;

    uint32 fontSize = 2;

    string color = 3;
 }